// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Toggle Button without CheckRoundedIcon 1`] = `
<div
  className="toggle-button-container"
>
  <div
    className="toggle-button"
  >
    <button
      className=""
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`should render ToggleButton with CheckRoundedIcon 1`] = `
<div
  className="toggle-button-container"
>
  <div
    className="toggle-button"
  >
    <button
      className=""
      onClick={[Function]}
    >
      <Memo([object Object])
        className="check-icon "
        data-testid="check"
        fontSize="large"
      />
    </button>
  </div>
</div>
`;
